# gorgonzola-api-langs

java_api/: CMakeLists.txt  README.md  build.gradle  settings.gradle
java_api/example/: build.gradle
java_api/example/src/main/java/: Main.java
java_api/src/jni/: gorgonzola_java.cpp
java_api/src/main/java/com/gorgonzoladb/: Connection.java  DataType.java  DataTypeID.java  Database.java  FlatTuple.java  GorgonzolaList.java  GorgonzolaMap.java  GorgonzolaStruct.java  InternalID.java  Native.java  PreparedStatement.java  QueryResult.java  QuerySummary.java  Value.java  ValueNodeUtil.java  ValueRecursiveRelUtil.java  ValueRelUtil.java  Version.java  package-info.java
java_api/src/test/java/com/gorgonzoladb/: ConnectionTest.java  DataTypeTest.java  DatabaseTest.java  FlatTupleTest.java  PreparedStatementTest.java  QueryResultTest.java  TestBase.java  TestHelper.java  ValueTest.java  VersionTest.java
nodejs_api/: CMakeLists.txt  README.md  build.js  install.js  package.js  package.json
nodejs_api/src_cpp/: node_connection.cpp  node_progress_bar_display.cpp  node_query_result.cpp  node_util.cpp
nodejs_api/src_js/: connection.js  database.js  gorgonzola.d.ts  gorgonzola_native.js  index.mjs  prepared_statement.js  query_result.js
nodejs_api/test/: common.js  test.js  test_concurrency.js  test_connection.js  test_database.js  test_sync_api.js  test_version.js
python_api/: CMakeLists.txt  Makefile  pyproject.toml
python_api/src_cpp/: gorgonzola_binding.cpp  py_connection.cpp  py_database.cpp  py_scan_config.cpp  py_udf.cpp
python_api/src_py/: __init__.py  async_connection.py  connection.py  database.py  query_result.py  torch_geometric_feature_store.py  torch_geometric_graph_store.py
python_api/test/: conftest.py  ground_truth.py  test_arrow.py  test_async_connection.py  test_blob_parameter.py  test_connection.py  test_database.py  test_datatype.py  test_df.py  test_dict.py  test_exception.py  test_extension.py  test_fsm.py  test_helper.py  test_iteration.py  test_networkx.py  test_parameter.py  test_prepared_statement.py  test_query_result_close.py  test_scan_pandas.py  test_scan_pandas_pyarrow.py  test_torch_geometric.py  test_torch_geometric_remote_backend.py  test_udf.py  test_version.py  (+2 more)
rust_api/: Cargo.toml  build.rs  update_version.py
rust_api/src/: CMakeLists.txt  connection.rs  database.rs  error.rs  ffi.rs  gorgonzola_arrow.cpp  gorgonzola_rs.cpp  lib.rs  logical_type.rs  value.rs
rust_api/src/ffi/: arrow.rs
wasm/: CMakeLists.txt  README.md  build.mjs  package-lock.json  package.json
(+69 files in other folders)
